--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,14 +852,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 3,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "43dd40fc-8a1d-48ba-ee6e-26324d775788",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "08804f3e-27ec-4d25-eac3-6721f6b25feb"
       },
       "outputs": [
         {
@@ -869,11 +869,11 @@
             "\"\n",
             "-------- Summary --------\n",
             "\"  Variable name  coefficient value  standard error  t-statistic       p-value\n",
-            "0     intercept       13199.797996     1893.014235     6.972899  1.623452e-12\n",
-            "1           sex      -13565.410627      584.976467   -23.189669  1.000000e+00\n",
-            "2           age        -234.991719       16.183833   -14.520153  1.000000e+00\n",
-            "3          educ        5774.818729      142.857276    40.423694  0.000000e+00\n",
-            "4         white        3404.128500     1156.674059     2.943032  1.627799e-03\n"
+            "0           sex      -13565.410627      584.976467   -23.189669  1.000000e+00\n",
+            "1           age        -234.991719       16.183833   -14.520153  1.000000e+00\n",
+            "2          educ        5774.818729      142.857276    40.423694  0.000000e+00\n",
+            "3         white        3404.128500     1156.674059     2.943032  1.627799e-03\n",
+            "4     intercept       13199.797996     1893.014235     6.972899  1.623452e-12\n"
           ]
         }
       ],
@@ -919,11 +919,11 @@
         "  def add_intercept(self, create_intercept):\n",
         "    if create_intercept:\n",
         "      ##> Update Endogenous Variables first elt with <intercept>\n",
-        "      self.x_list.insert(0,'intercept')\n",
+        "      self.x_list.append('intercept')\n",
         "      #print (type(self.x_list))\n",
         "      ##> Set beta_0, all 1 in First Column of x\n",
         "      all_1 = pd.DataFrame([1 for i in range(self.num_obs)], columns=['intercept'])\n",
-        "      self.x = pd.concat([all_1, self.x], axis=1).reset_index(drop=True)\n",
+        "      self.x = pd.concat([self.x, all_1], axis=1).reset_index(drop=True)\n",
         "\n",
         "  def inver(self, mat):\n",
         "    \"\"\"inverse of the matrix\"\"\"\n",
@@ -1040,7 +1040,7 @@
         "outputId": "02af4393-c7b4-41bb-e4ac-9af4142220b4"
       },
       "id": "fZ_OxP2YqWjd",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
