--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,14 +852,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 21,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "08804f3e-27ec-4d25-eac3-6721f6b25feb"
+        "outputId": "669137c6-6168-4ca4-b0ad-f75c07a6fe77"
       },
       "outputs": [
         {
@@ -883,7 +883,7 @@
         "from scipy.stats import t\n",
         "import pandas as pd\n",
         "\n",
-        "class RegressionModel(object):\n",
+        "class RegressionModel():\n",
         "  \"\"\"\n",
         "  x and y should be data frames\n",
         "  create_intercept should be a binary variable (True or False)\n",
@@ -896,15 +896,12 @@
         "              https://youtu.be/e8MyE5iRBEA\n",
         "              https://www.youtube.com/watch?v=e8MyE5iRBEA\n",
         "  \"\"\"\n",
-        "  def __repr__ (self):\n",
-        "#    return str(self.y)\n",
-        "    return str(self.x)\n",
         "\n",
         "  def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
         "    self.x = pd.DataFrame(x)\n",
         "    self.y = pd.DataFrame(y)\n",
         "    self.num_obs = len(self.x) #number of observation\n",
-        "    self.regression_type = regression_type\n",
+        "    self.regression_type = regression_type #will be used for next HW9\n",
         "\n",
         "    #>exogenous and endogenous variables labels\n",
         "    self.x_list = list(self.x.columns.values)\n",
@@ -915,8 +912,11 @@
         "    self.add_intercept(create_intercept)\n",
         "    self.x = np.array(self.x)\n",
         "    self.y = np.array(self.y)\n",
+        "    #print(self.x)\n",
         "\n",
+        "#> Helpful Functions, Begining\n",
         "  def add_intercept(self, create_intercept):\n",
+        "    \"\"\"will add a column of ones to the data frame x if create_intercept is True\"\"\"\n",
         "    if create_intercept:\n",
         "      ##> Update Endogenous Variables first elt with <intercept>\n",
         "      self.x_list.append('intercept')\n",
@@ -928,6 +928,7 @@
         "  def inver(self, mat):\n",
         "    \"\"\"inverse of the matrix\"\"\"\n",
         "    return np.linalg.inv(mat)\n",
+        "#> Helpful Functions, End\n",
         "\n",
         "  def BetaHat(self):\n",
         "    \"\"\">Solving Beta_hat\n",
@@ -940,7 +941,7 @@
         "    self.Beta_hat = list(self.Beta_hat_M.T)[0] #from (5,1) to a list\n",
         "\n",
         "#> Col3 - Begining: standard error\n",
-        "  def chat2(self):\n",
+        "  def chat2(self): #chat or shat, sound about the same.\n",
         "    \"\"\"Variance <s**2>  = [ (y - x * B_hat)_tansp * (y - x * B_hat) ] / ( n - k )  \"\"\"\n",
         "    n, k = self.x.shape\n",
         "    self.df = n - k\n",
@@ -1023,53 +1024,7 @@
         "\n",
         "R = RegressionModel(x, y, True)\n",
         "R.ols_regression()\n",
-        "\n",
-        "R.summary()\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "help(t.sf)"
-      ],
-      "metadata": {
-        "id": "fZ_OxP2YqWjd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "02af4393-c7b4-41bb-e4ac-9af4142220b4"
-      },
-      "id": "fZ_OxP2YqWjd",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Help on method sf in module scipy.stats._distn_infrastructure:\n",
-            "\n",
-            "sf(x, *args, **kwds) method of scipy.stats._continuous_distns.t_gen instance\n",
-            "    Survival function (1 - `cdf`) at x of the given RV.\n",
-            "    \n",
-            "    Parameters\n",
-            "    ----------\n",
-            "    x : array_like\n",
-            "        quantiles\n",
-            "    arg1, arg2, arg3,... : array_like\n",
-            "        The shape parameter(s) for the distribution (see docstring of the\n",
-            "        instance object for more information)\n",
-            "    loc : array_like, optional\n",
-            "        location parameter (default=0)\n",
-            "    scale : array_like, optional\n",
-            "        scale parameter (default=1)\n",
-            "    \n",
-            "    Returns\n",
-            "    -------\n",
-            "    sf : array_like\n",
-            "        Survival function evaluated at x\n",
-            "\n"
-          ]
-        }
+        "R.summary()"
       ]
     }
   ],
