--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
@@ -883,7 +883,7 @@
         "from scipy.stats import t\n",
         "import pandas as pd\n",
         "\n",
-        "class RegressionModel():\n",
+        "class RegressionModel:\n",
         "  \"\"\"\n",
         "  x and y should be data frames\n",
         "  create_intercept should be a binary variable (True or False)\n",
