remove read_csv

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -920,8 +920,12 @@
         "                    ,\"t-statistic\"      : self.t_stat\n",
         "                    ,\"p-value\"          : self.p_val\n",
         "                           \"\"\"\n",
-        "    print(results)\n",
-        "\n",
+        "    print(results)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "data = pd.read_csv(\"assignment8Data.csv\")\n",
         "x = data[['sex','age','educ','white']]\n",
         "y = data['incwage']\n",
@@ -929,7 +933,13 @@
         "R = RegressionModel(x, y, create_intercept=True)\n",
         "R.ols_regression()\n",
         "R.summary()"
-      ]
+      ],
+      "metadata": {
+        "id": "bpMxgTuqITdR"
+      },
+      "id": "bpMxgTuqITdR",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
