fix pd type unitest1

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -889,11 +889,11 @@
         "    self.y_label = ''.join(self.y.columns.values)\n",
         "    #print (f'y_label = {self.y_label}, x_list = {self.x_list}\\n***********************')\n",
         "\n",
-        "    #>convert DataFrame to Matrixes\n",
+        "    #>convert DataFrame to Matrixes but keep x&y type <class 'pandas.core.frame.DataFrame'> koz unitest\n",
         "    self.add_intercept(create_intercept)\n",
-        "    self.x = np.array(self.x)\n",
-        "    self.y = np.array(self.y)\n",
-        "    #print(self.x)\n",
+        "    self.x1 = np.array(self.x)\n",
+        "    self.y1 = np.array(self.y)\n",
+        "    #print(self.x1)\n",
         "\n",
         "#> Helpful Functions, Begining\n",
         "  def add_intercept(self, create_intercept):\n",
@@ -916,23 +916,23 @@
         "       >y = x . Beta_hat + E\n",
         "       >Beta_hat = ( x’ x)_inv  x’ y\n",
         "    \"\"\"\n",
-        "    xt_x = self.x.T @ self.x\n",
-        "    xt_y = self.x.T @ self.y\n",
+        "    xt_x = self.x1.T @ self.x1\n",
+        "    xt_y = self.x1.T @ self.y1\n",
         "    self.Beta_hat_M = self.inver(xt_x) @ (xt_y)\n",
         "    self.Beta_hat = list(self.Beta_hat_M.T)[0] #from (5,1) to a list\n",
         "\n",
         "#> Col3 - Begining: standard error\n",
         "  def chat2(self): #chat or shat, sound about the same.\n",
         "    \"\"\"Variance <s**2>  = [ (y - x * B_hat)_tansp * (y - x * B_hat) ] / ( n - k )  \"\"\"\n",
-        "    n, k = self.x.shape\n",
+        "    n, k = self.x1.shape\n",
         "    self.df = n - k\n",
-        "    res = ((self.y - self.x @ self.Beta_hat_M).T @ (self.y - self.x @ self.Beta_hat_M)) / ( self.df)\n",
+        "    res = ((self.y1 - self.x1 @ self.Beta_hat_M).T @ (self.y1 - self.x1 @ self.Beta_hat_M)) / ( self.df)\n",
         "    #print(f'chat2: {res[0][0]}')\n",
         "    return float(res[0][0])\n",
         "\n",
         "  def varianceOfBeta_hat(self):\n",
         "    #\"\"\" Covariance = chat2 * ( xt * x )_inver \"\"\"\n",
-        "    covariance = self.chat2() * ( self.inver( self.x.T @ self.x ) )\n",
+        "    covariance = self.chat2() * ( self.inver( self.x1.T @ self.x1 ) )\n",
         "    return np.diag(covariance)\n",
         "\n",
         "  def std_error(self):\n",
@@ -984,6 +984,12 @@
         "R.ols_regression()\n",
         "R.summary()\n",
         "\n",
+        "print('---------')\n",
+        "x2 = x.assign(intercept=pd.Series([1]*np.shape(x)[0]))\n",
+        "print(f'type(x): {type(x)}')\n",
+        "print(f'type(x2): {type(x2)}')\n",
+        "print(f'type(R): {type(R.x)}')\n",
+        "\n",
         "def TestCode():\n",
         "  \"\"\" Should be equal to\n",
         "      sex = {'coefficient': -13565.410626563069,\n",
@@ -1017,10 +1023,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7F-RwjYxJ0wT",
-        "outputId": "1ec2633d-62a2-43f9-a397-787a17b572be"
+        "outputId": "19dfcc3e-d82b-431e-8792-8e05b51bae0e"
       },
       "id": "7F-RwjYxJ0wT",
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1033,7 +1039,11 @@
             "1           age        -234.991719       16.183833   -14.520153  1.000000e+00\n",
             "2          educ        5774.818729      142.857276    40.423694  0.000000e+00\n",
             "3         white        3404.128500     1156.674059     2.943032  1.627799e-03\n",
-            "4     intercept       13199.797996     1893.014235     6.972899  1.623452e-12\n"
+            "4     intercept       13199.797996     1893.014235     6.972899  1.623452e-12\n",
+            "---------\n",
+            "type(x): <class 'pandas.core.frame.DataFrame'>\n",
+            "type(x2): <class 'pandas.core.frame.DataFrame'>\n",
+            "type(R): <class 'pandas.core.frame.DataFrame'>\n"
           ]
         }
       ]
