--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 31,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -879,20 +879,22 @@
         "  \"\"\"\n",
         "\n",
         "  def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "    #print (f'****** type of y \\n\\n{y}\\n\\n')\n",
         "    self.x = pd.DataFrame(x)\n",
-        "    self.y = pd.DataFrame(y)\n",
+        "    self.y = y #type(y): <class 'pandas.core.series.Series'> not <class 'pandas.core.frame.DataFrame'>\n",
+        "    self.y2 = pd.DataFrame(y)\n",
         "    self.num_obs = len(self.x) #number of observation\n",
         "    self.regression_type = regression_type #will be used for next HW9\n",
         "\n",
         "    #>exogenous and endogenous variables labels\n",
         "    self.x_list = list(self.x.columns.values)\n",
-        "    self.y_label = ''.join(self.y.columns.values)\n",
+        "    self.y_label = y.name\n",
         "    #print (f'y_label = {self.y_label}, x_list = {self.x_list}\\n***********************')\n",
         "\n",
         "    #>convert DataFrame to Matrixes but keep x&y type <class 'pandas.core.frame.DataFrame'> koz unitest\n",
         "    self.add_intercept(create_intercept)\n",
         "    self.x1 = np.array(self.x)\n",
-        "    self.y1 = np.array(self.y)\n",
+        "    self.y1 = np.array(self.y2)\n",
         "    #print(self.x1)\n",
         "\n",
         "#> Helpful Functions, Begining\n",
@@ -927,7 +929,7 @@
         "    n, k = self.x1.shape\n",
         "    self.df = n - k\n",
         "    res = ((self.y1 - self.x1 @ self.Beta_hat_M).T @ (self.y1 - self.x1 @ self.Beta_hat_M)) / ( self.df)\n",
-        "    #print(f'chat2: {res[0][0]}')\n",
+        "    print(f'chat2: {res}')\n",
         "    return float(res[0][0])\n",
         "\n",
         "  def varianceOfBeta_hat(self):\n",
@@ -986,9 +988,19 @@
         "\n",
         "print('---------')\n",
         "x2 = x.assign(intercept=pd.Series([1]*np.shape(x)[0]))\n",
-        "print(f'type(x): {type(x)}')\n",
-        "print(f'type(x2): {type(x2)}')\n",
-        "print(f'type(R): {type(R.x)}')\n",
+        "\n",
+        "## Test x - ok\n",
+        "#print(f'type(x): {type(x)}')\n",
+        "#print(f'type(x2): {type(x2)}')\n",
+        "#print(f'type(R): {type(R.x)}')\n",
+        "#print(f'R.x :\\n {R.x}')\n",
+        "#print(f'\\nx2:\\n {x2}')\n",
+        "\n",
+        "## Test y - ?\n",
+        "print(f'\\ntype(y): {type(y)}')\n",
+        "print(f'\\ntype(R.y): {type(R.y)}')\n",
+        "print(f'\\nR.y :\\n {R.y}')\n",
+        "print(f'\\ny:\\n {y}')\n",
         "\n",
         "def TestCode():\n",
         "  \"\"\" Should be equal to\n",
@@ -1023,15 +1035,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7F-RwjYxJ0wT",
-        "outputId": "19dfcc3e-d82b-431e-8792-8e05b51bae0e"
+        "outputId": "8ed34bbc-5c8e-45d2-867c-735b3ec3b97b"
       },
       "id": "7F-RwjYxJ0wT",
-      "execution_count": 6,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "chat2: [[1.16824055e+09]]\n",
+            "chat2: [[1.16824055e+09]]\n",
             "\"\n",
             "-------- Summary --------\n",
             "\"  Variable name  coefficient value  standard error  t-statistic       p-value\n",
@@ -1041,10 +1055,70 @@
             "3         white        3404.128500     1156.674059     2.943032  1.627799e-03\n",
             "4     intercept       13199.797996     1893.014235     6.972899  1.623452e-12\n",
             "---------\n",
-            "type(x): <class 'pandas.core.frame.DataFrame'>\n",
-            "type(x2): <class 'pandas.core.frame.DataFrame'>\n",
-            "type(R): <class 'pandas.core.frame.DataFrame'>\n"
+            "\n",
+            "type(y): <class 'pandas.core.series.Series'>\n",
+            "\n",
+            "type(R.y): <class 'pandas.core.series.Series'>\n",
+            "\n",
+            "R.y :\n",
+            " 0        19000\n",
+            "1        25000\n",
+            "2            0\n",
+            "3        40000\n",
+            "4        32000\n",
+            "         ...  \n",
+            "13707    52000\n",
+            "13708        0\n",
+            "13709    18200\n",
+            "13710        0\n",
+            "13711    45000\n",
+            "Name: incwage, Length: 13712, dtype: int64\n",
+            "\n",
+            "y:\n",
+            " 0        19000\n",
+            "1        25000\n",
+            "2            0\n",
+            "3        40000\n",
+            "4        32000\n",
+            "         ...  \n",
+            "13707    52000\n",
+            "13708        0\n",
+            "13709    18200\n",
+            "13710        0\n",
+            "13711    45000\n",
+            "Name: incwage, Length: 13712, dtype: int64\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y.name"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "dnMUu5RXT3YM",
+        "outputId": "3a7650d4-5cce-4ed9-ea7d-1f5c1c5ae6ad"
+      },
+      "id": "dnMUu5RXT3YM",
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'incwage'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 23
         }
       ]
     }
