--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -965,14 +965,14 @@
         "\n",
         "  def summary(self):\n",
         "    \"\"\"Will display the summary of all feature of the Multi dimension Regression\"\"\"\n",
-        "    results = pd.DataFrame({\n",
+        "    self.results = pd.DataFrame({\n",
         "                    \"Variable name\"     : self.x_list\n",
         "                    ,\"coefficient value\": self.Beta_hat\n",
         "                    ,\"standard error\"   : self.stdError\n",
         "                    ,\"t-statistic\"      : self.t_stat\n",
         "                    ,\"p-value\"          : self.p_val\n",
         "                           })\n",
-        "    print(f'\"\\n-------- Summary --------\\n\"{results}')"
+        "    print(f'\"\\n-------- Summary --------\\n\"{self.results}')"
       ]
     },
     {
@@ -1038,7 +1038,7 @@
         "outputId": "8ed34bbc-5c8e-45d2-867c-735b3ec3b97b"
       },
       "id": "7F-RwjYxJ0wT",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1105,7 +1105,7 @@
         "outputId": "3a7650d4-5cce-4ed9-ea7d-1f5c1c5ae6ad"
       },
       "id": "dnMUu5RXT3YM",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
