--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -855,9 +855,27 @@
       "execution_count": null,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
-        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
+        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3b3bef06-f063-4813-e209-4b8733df7ccc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "                    \"Variable name\"     : self.x_list\n",
+            "                    ,\"coefficient value\": self.Beta_hat\n",
+            "                    ,\"standard error\"   : self.stdError\n",
+            "                    ,\"t-statistic\"      : self.t_stat\n",
+            "                    ,\"p-value\"          : self.p_val\n",
+            "                           }) \n"
+          ]
+        }
+      ],
       "source": [
         "#si-exercise\n",
         "import numpy as np\n",
@@ -867,112 +885,41 @@
         "class RegressionModel:\n",
         "  \"\"\"\n",
         "  x and y should be data frames\n",
-        "  create_intercept should be a binary variable (True or False)\n",
-        "  Code from Souleymane Diawara.\n",
-        "  regression_type should be a string, containing either \"ols\" or \"logit\" (we won't work with the logistic part this week... that is for next week)\n",
-        "  Exercise 8: Youtube link below _\n",
-        "              https://youtu.be/rM3-PmO36IE\n",
-        "              https://youtu.be/N1rxak17oJE\n",
-        "              https://youtu.be/ILStLebXvXM\n",
-        "              https://youtu.be/e8MyE5iRBEA\n",
-        "              https://www.youtube.com/watch?v=e8MyE5iRBEA\n",
+        "  PH\n",
         "  \"\"\"\n",
         "\n",
         "  def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-        "    #print (f'****** type of y \\n\\n{y}\\n\\n')\n",
         "    self.x = pd.DataFrame(x)\n",
-        "    self.y = y #type(y): <class 'pandas.core.series.Series'> not <class 'pandas.core.frame.DataFrame'>\n",
-        "    self.y2 = pd.DataFrame(y)\n",
-        "    self.num_obs = len(self.x) #number of observation\n",
-        "    self.regression_type = regression_type #will be used for next HW9\n",
-        "\n",
-        "    #>exogenous and endogenous variables labels\n",
-        "    self.x_list = list(self.x.columns.values)\n",
-        "    self.y_label = y.name\n",
-        "    #print (f'y_label = {self.y_label}, x_list = {self.x_list}\\n***********************')\n",
-        "\n",
-        "    #>convert DataFrame to Matrixes but keep x&y type <class 'pandas.core.frame.DataFrame'> koz unitest\n",
-        "    self.add_intercept(create_intercept)\n",
-        "    self.x1 = np.array(self.x)\n",
-        "    self.y1 = np.array(self.y2)\n",
-        "    #print(self.x1)\n",
-        "\n",
-        "#> Helpful Functions, Begining\n",
-        "  def add_intercept(self, create_intercept):\n",
-        "    \"\"\"will add a column of ones to the data frame x if create_intercept is True\"\"\"\n",
-        "    if create_intercept:\n",
-        "      ##> Update Endogenous Variables first elt with <intercept>\n",
-        "      self.x_list.append('intercept')\n",
-        "      #print (type(self.x_list))\n",
-        "      ##> Set beta_0, all 1 in First Column of x\n",
-        "      all_1 = pd.DataFrame([1 for i in range(self.num_obs)], columns=['intercept'])\n",
-        "      self.x = pd.concat([self.x, all_1], axis=1).reset_index(drop=True)\n",
-        "\n",
-        "  def inver(self, mat):\n",
-        "    \"\"\"inverse of the matrix\"\"\"\n",
-        "    return np.linalg.inv(mat)\n",
-        "#> Helpful Functions, End\n",
+        "    self.y = pd.DataFrame(y)\n",
         "\n",
         "  def BetaHat(self):\n",
-        "    \"\"\">Solving Beta_hat\n",
-        "       >y = x . Beta_hat + E\n",
-        "       >Beta_hat = ( x’ x)_inv  x’ y\n",
-        "    \"\"\"\n",
-        "    xt_x = self.x1.T @ self.x1\n",
-        "    xt_y = self.x1.T @ self.y1\n",
-        "    self.Beta_hat_M = self.inver(xt_x) @ (xt_y)\n",
-        "    self.Beta_hat = list(self.Beta_hat_M.T)[0] #from (5,1) to a list\n",
+        "    None\n",
         "\n",
-        "#> Col3 - Begining: standard error\n",
-        "  def chat2(self): #chat or shat, sound about the same.\n",
-        "    \"\"\"Variance <s**2>  = [ (y - x * B_hat)_tansp * (y - x * B_hat) ] / ( n - k )  \"\"\"\n",
-        "    n, k = self.x1.shape\n",
-        "    self.df = n - k\n",
-        "    res = ((self.y1 - self.x1 @ self.Beta_hat_M).T @ (self.y1 - self.x1 @ self.Beta_hat_M)) / ( self.df)\n",
-        "    print(f'chat2: {res}')\n",
-        "    return float(res[0][0])\n",
-        "\n",
-        "  def varianceOfBeta_hat(self):\n",
-        "    #\"\"\" Covariance = chat2 * ( xt * x )_inver \"\"\"\n",
-        "    covariance = self.chat2() * ( self.inver( self.x1.T @ self.x1 ) )\n",
-        "    return np.diag(covariance)\n",
+        "  def chat2(self):\n",
+        "    return None\n",
         "\n",
         "  def std_error(self):\n",
-        "    self.stdError = list(np.sqrt(self.varianceOfBeta_hat()))\n",
-        "    # https://youtu.be/e8MyE5iRBEA?si=ZaJSQTf36KptTSwT&t=398\n",
-        "#> Col3 - End: standard error\n",
+        "    self.stdError = None\n",
         "\n",
-        "#> Col4 - Begining: t-statistic\n",
         "  def t_statistic(self):\n",
-        "    \"\"\" t =  Beta_hat(j) / stdError(j), each element one-by-one \"\"\"\n",
-        "    #self.t_stat =  self.Beta_hat_M / self.stdError\n",
-        "    self.t_stat = [Bj / Oj for Bj, Oj in zip(self.Beta_hat, self.stdError)]\n",
-        "#> Col4 - End: t-statistic\n",
+        "    None\n",
         "\n",
-        "#> Col5 - Begining: p-value\n",
         "  def p_value(self):\n",
-        "    \"\"\" p_val =  t.sf ( t_stat , degreeOfFreedom_df) \"\"\"\n",
-        "    self.p_val = t.sf (self.t_stat, self.df)\n",
-        "#> Col5 - End\n",
+        "    None\n",
         "\n",
         "  def ols_regression(self):\n",
         "    \"\"\" Main method to call\"\"\"\n",
-        "    self.BetaHat()\n",
-        "    self.varianceOfBeta_hat()\n",
-        "    self.std_error()\n",
-        "    self.t_statistic()\n",
-        "    self.p_value()\n",
+        "    None\n",
         "\n",
         "  def summary(self):\n",
-        "    \"\"\"Will display the summary of all feature of the Multi dimension Regression\"\"\"\n",
-        "    self.results = pd.DataFrame({\n",
+        "    results = \"\"\"\n",
         "                    \"Variable name\"     : self.x_list\n",
         "                    ,\"coefficient value\": self.Beta_hat\n",
         "                    ,\"standard error\"   : self.stdError\n",
         "                    ,\"t-statistic\"      : self.t_stat\n",
         "                    ,\"p-value\"          : self.p_val\n",
-        "                           })\n",
-        "    print(f'\"\\n-------- Summary --------\\n\"{self.results}')"
+        "                           \"\"\"\n",
+        "    print(results)"
       ]
     },
     {
@@ -982,145 +929,16 @@
         "x = data[['sex','age','educ','white']]\n",
         "y = data['incwage']\n",
         "\n",
-        "R = RegressionModel(x, y, True)\n",
+        "R = RegressionModel(x, y, create_intercept=True)\n",
         "R.ols_regression()\n",
-        "R.summary()\n",
-        "\n",
-        "print('---------')\n",
-        "x2 = x.assign(intercept=pd.Series([1]*np.shape(x)[0]))\n",
-        "\n",
-        "## Test x - ok\n",
-        "#print(f'type(x): {type(x)}')\n",
-        "#print(f'type(x2): {type(x2)}')\n",
-        "#print(f'type(R): {type(R.x)}')\n",
-        "#print(f'R.x :\\n {R.x}')\n",
-        "#print(f'\\nx2:\\n {x2}')\n",
-        "\n",
-        "## Test y - ?\n",
-        "print(f'\\ntype(y): {type(y)}')\n",
-        "print(f'\\ntype(R.y): {type(R.y)}')\n",
-        "print(f'\\nR.y :\\n {R.y}')\n",
-        "print(f'\\ny:\\n {y}')\n",
-        "\n",
-        "def TestCode():\n",
-        "  \"\"\" Should be equal to\n",
-        "      sex = {'coefficient': -13565.410626563069,\n",
-        "      'standard_error': 584.9764665087288,\n",
-        "      't_stat': -23.189668992198083,\n",
-        "      'p_value': 1.0}\n",
-        "\n",
-        "      age = {'coefficient': -234.9917187921841,\n",
-        "      'standard_error': 16.183832538528538,\n",
-        "      't_stat': -14.52015264201133,\n",
-        "      'p_value': 1.0}\n",
-        "\n",
-        "      educ = {'coefficient': 5774.818729189603,\n",
-        "      'standard_error': 142.8572756581845,\n",
-        "      't_stat': 40.423693526166964,\n",
-        "      'p_value': 0.0}\n",
-        "\n",
-        "      white = {'coefficient': 3404.128500195802,\n",
-        "      'standard_error': 1156.6740591808912,\n",
-        "      't_stat': 2.9430317669668025,\n",
-        "      'p_value': 0.0016277988173345036}\n",
-        "\n",
-        "      intercept = {'coefficient': 13199.797995938803,\n",
-        "      'standard_error': 1893.0142350027074,\n",
-        "      't_stat': 6.972899491122909,\n",
-        "      'p_value': 1.6234517904886598e-12}\"\"\"\n",
-        "  None"
+        "R.summary()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7F-RwjYxJ0wT",
-        "outputId": "8ed34bbc-5c8e-45d2-867c-735b3ec3b97b"
+        "id": "bpMxgTuqITdR"
       },
-      "id": "7F-RwjYxJ0wT",
+      "id": "bpMxgTuqITdR",
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "chat2: [[1.16824055e+09]]\n",
-            "chat2: [[1.16824055e+09]]\n",
-            "\"\n",
-            "-------- Summary --------\n",
-            "\"  Variable name  coefficient value  standard error  t-statistic       p-value\n",
-            "0           sex      -13565.410627      584.976467   -23.189669  1.000000e+00\n",
-            "1           age        -234.991719       16.183833   -14.520153  1.000000e+00\n",
-            "2          educ        5774.818729      142.857276    40.423694  0.000000e+00\n",
-            "3         white        3404.128500     1156.674059     2.943032  1.627799e-03\n",
-            "4     intercept       13199.797996     1893.014235     6.972899  1.623452e-12\n",
-            "---------\n",
-            "\n",
-            "type(y): <class 'pandas.core.series.Series'>\n",
-            "\n",
-            "type(R.y): <class 'pandas.core.series.Series'>\n",
-            "\n",
-            "R.y :\n",
-            " 0        19000\n",
-            "1        25000\n",
-            "2            0\n",
-            "3        40000\n",
-            "4        32000\n",
-            "         ...  \n",
-            "13707    52000\n",
-            "13708        0\n",
-            "13709    18200\n",
-            "13710        0\n",
-            "13711    45000\n",
-            "Name: incwage, Length: 13712, dtype: int64\n",
-            "\n",
-            "y:\n",
-            " 0        19000\n",
-            "1        25000\n",
-            "2            0\n",
-            "3        40000\n",
-            "4        32000\n",
-            "         ...  \n",
-            "13707    52000\n",
-            "13708        0\n",
-            "13709    18200\n",
-            "13710        0\n",
-            "13711    45000\n",
-            "Name: incwage, Length: 13712, dtype: int64\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "y.name"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "dnMUu5RXT3YM",
-        "outputId": "3a7650d4-5cce-4ed9-ea7d-1f5c1c5ae6ad"
-      },
-      "id": "dnMUu5RXT3YM",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'incwage'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
-      ]
+      "outputs": []
     }
   ],
   "metadata": {
