--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,30 +852,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
-        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3b3bef06-f063-4813-e209-4b8733df7ccc"
+        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "                    \"Variable name\"     : self.x_list\n",
-            "                    ,\"coefficient value\": self.Beta_hat\n",
-            "                    ,\"standard error\"   : self.stdError\n",
-            "                    ,\"t-statistic\"      : self.t_stat\n",
-            "                    ,\"p-value\"          : self.p_val\n",
-            "                           }) \n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-exercise\n",
         "import numpy as np\n",
@@ -885,60 +867,217 @@
         "class RegressionModel:\n",
         "  \"\"\"\n",
         "  x and y should be data frames\n",
-        "  PH\n",
+        "  create_intercept should be a binary variable (True or False)\n",
+        "  Code from Souleymane Diawara.\n",
+        "  regression_type should be a string, containing either \"ols\" or \"logit\" (we won't work with the logistic part this week... that is for next week)\n",
+        "  Exercise 8: Youtube link below _\n",
+        "              https://youtu.be/rM3-PmO36IE\n",
+        "              https://youtu.be/N1rxak17oJE\n",
+        "              https://youtu.be/ILStLebXvXM\n",
+        "              https://youtu.be/e8MyE5iRBEA\n",
+        "              https://www.youtube.com/watch?v=e8MyE5iRBEA\n",
         "  \"\"\"\n",
         "\n",
         "  def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "    #print (f'****** type of y \\n\\n{y}\\n\\n')\n",
         "    self.x = pd.DataFrame(x)\n",
-        "    self.y = pd.DataFrame(y)\n",
+        "    self.y = y #type(y): <class 'pandas.core.series.Series'> not <class 'pandas.core.frame.DataFrame'>\n",
+        "    self.y2 = pd.DataFrame(y)\n",
+        "    self.num_obs = len(self.x) #number of observation\n",
+        "    self.regression_type = regression_type #will be used for next HW9\n",
+        "\n",
+        "    #>exogenous and endogenous variables labels\n",
+        "    self.x_list = list(self.x.columns.values)\n",
+        "    self.y_label = y.name\n",
+        "    #print (f'y_label = {self.y_label}, x_list = {self.x_list}\\n***********************')\n",
+        "\n",
+        "    #>convert DataFrame to Matrixes but keep x&y type <class 'pandas.core.frame.DataFrame'> koz unitest\n",
+        "    self.add_intercept(create_intercept)\n",
+        "    self.x1 = np.array(self.x)\n",
+        "    self.y1 = np.array(self.y2)\n",
+        "    #print(self.x1)\n",
+        "\n",
+        "#> Helpful Functions, Begining\n",
+        "  def add_intercept(self, create_intercept):\n",
+        "    \"\"\"will add a column of ones to the data frame x if create_intercept is True\"\"\"\n",
+        "    if create_intercept:\n",
+        "      ##> Update Endogenous Variables first elt with <intercept>\n",
+        "      self.x_list.append('intercept')\n",
+        "      #print (type(self.x_list))\n",
+        "      ##> Set beta_0, all 1 in First Column of x\n",
+        "      all_1 = pd.DataFrame([1 for i in range(self.num_obs)], columns=['intercept'])\n",
+        "      self.x = pd.concat([self.x, all_1], axis=1).reset_index(drop=True)\n",
+        "\n",
+        "  def inver(self, mat):\n",
+        "    \"\"\"inverse of the matrix\"\"\"\n",
+        "    return np.linalg.inv(mat)\n",
+        "#> Helpful Functions, End\n",
         "\n",
         "  def BetaHat(self):\n",
-        "    None\n",
+        "    \"\"\">Solving Beta_hat\n",
+        "       >y = x . Beta_hat + E\n",
+        "       >Beta_hat = ( x’ x)_inv  x’ y\n",
+        "    \"\"\"\n",
+        "    xt_x = self.x1.T @ self.x1\n",
+        "    xt_y = self.x1.T @ self.y1\n",
+        "    self.Beta_hat_M = self.inver(xt_x) @ (xt_y)\n",
+        "    self.Beta_hat = list(self.Beta_hat_M.T)[0] #from (5,1) to a list\n",
         "\n",
-        "  def chat2(self):\n",
-        "    return None\n",
+        "#> Col3 - Begining: standard error\n",
+        "  def chat2(self): #chat or shat, sound about the same.\n",
+        "    \"\"\"Variance <s**2>  = [ (y - x * B_hat)_tansp * (y - x * B_hat) ] / ( n - k )  \"\"\"\n",
+        "    n, k = self.x1.shape\n",
+        "    self.df = n - k\n",
+        "    res = ((self.y1 - self.x1 @ self.Beta_hat_M).T @ (self.y1 - self.x1 @ self.Beta_hat_M)) / ( self.df)\n",
+        "    #print(f'chat2: {res}')\n",
+        "    return float(res[0][0])\n",
+        "\n",
+        "  def varianceOfBeta_hat(self):\n",
+        "    #\"\"\" Covariance = chat2 * ( xt * x )_inver \"\"\"\n",
+        "    covariance = self.chat2() * ( self.inver( self.x1.T @ self.x1 ) )\n",
+        "    return np.diag(covariance)\n",
         "\n",
         "  def std_error(self):\n",
-        "    self.stdError = None\n",
+        "    self.stdError = list(np.sqrt(self.varianceOfBeta_hat()))\n",
+        "    # https://youtu.be/e8MyE5iRBEA?si=ZaJSQTf36KptTSwT&t=398\n",
+        "#> Col3 - End: standard error\n",
         "\n",
+        "#> Col4 - Begining: t-statistic\n",
         "  def t_statistic(self):\n",
-        "    None\n",
+        "    \"\"\" t =  Beta_hat(j) / stdError(j), each element one-by-one \"\"\"\n",
+        "    #self.t_stat =  self.Beta_hat_M / self.stdError\n",
+        "    self.t_stat = [Bj / Oj for Bj, Oj in zip(self.Beta_hat, self.stdError)]\n",
+        "#> Col4 - End: t-statistic\n",
         "\n",
+        "#> Col5 - Begining: p-value\n",
         "  def p_value(self):\n",
-        "    None\n",
+        "    \"\"\" p_val =  t.sf ( t_stat , degreeOfFreedom_df) \"\"\"\n",
+        "    self.p_val = t.sf (self.t_stat, self.df)\n",
+        "#> Col5 - End\n",
         "\n",
         "  def ols_regression(self):\n",
         "    \"\"\" Main method to call\"\"\"\n",
-        "    None\n",
+        "    self.BetaHat()\n",
+        "    self.varianceOfBeta_hat()\n",
+        "    self.std_error()\n",
+        "    self.t_statistic()\n",
+        "    self.p_value()\n",
         "\n",
         "  def summary(self):\n",
-        "    results = \"\"\"\n",
+        "    \"\"\"Will display the summary of all feature of the Multi dimension Regression\"\"\"\n",
+        "\n",
+        "    ## v for test during dev\n",
+        "    dfResults = pd.DataFrame({\n",
         "                    \"Variable name\"     : self.x_list\n",
         "                    ,\"coefficient value\": self.Beta_hat\n",
         "                    ,\"standard error\"   : self.stdError\n",
         "                    ,\"t-statistic\"      : self.t_stat\n",
         "                    ,\"p-value\"          : self.p_val\n",
-        "                           \"\"\"\n",
-        "    print(results)"
+        "                           })\n",
+        "    print(f'\"\\n-------- Summary --------\\n\"{dfResults}')\n",
+        "\n",
+        "    ## v Result in a Dict\n",
+        "    dfResultsDict = pd.DataFrame({\n",
+        "                \"Variable name\"     : self.x_list\n",
+        "                ,\"coefficient\": self.Beta_hat\n",
+        "                ,\"standard_error\"   : self.stdError\n",
+        "                ,\"t_stat\"      : self.t_stat\n",
+        "                ,\"p_value\"          : self.p_val\n",
+        "                        })\n",
+        "    dfResultsDict = dfResultsDict.set_index(\"Variable name\")\n",
+        "    self.results = dfResultsDict.transpose().to_dict()"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "## Tests Chunk Code\n",
         "data = pd.read_csv(\"assignment8Data.csv\")\n",
         "x = data[['sex','age','educ','white']]\n",
         "y = data['incwage']\n",
         "\n",
-        "R = RegressionModel(x, y, create_intercept=True)\n",
-        "R.ols_regression()\n",
-        "R.summary()"
+        "reg = RegressionModel(x, y, True)\n",
+        "reg.ols_regression()\n",
+        "reg.summary()\n",
+        "print('---------')\n",
+        "sex = {'coefficient': -13565.410626563069,'standard_error': 584.9764665087288,'t_stat': -23.189668992198083,'p_value': 1.0}\n",
+        "age = {'coefficient': -234.9917187921841,'standard_error': 16.183832538528538,'t_stat': -14.52015264201133,'p_value': 1.0}\n",
+        "educ = {'coefficient': 5774.818729189603,'standard_error': 142.8572756581845,'t_stat': 40.423693526166964,'p_value': 0.0}\n",
+        "white = {'coefficient': 3404.128500195802,'standard_error': 1156.6740591808912,'t_stat': 2.9430317669668025,'p_value': 0.0016277988173345036}\n",
+        "intercept = {'coefficient': 13199.797995938803,'standard_error': 1893.0142350027074,'t_stat': 6.972899491122909,'p_value': 1.6234517904886598e-12}\n",
+        "\n",
+        "sexEq = (round(sex['coefficient'], 0)==round(reg.results['sex']['coefficient'], 0)) & (round(sex['standard_error'], 0)==round(reg.results['sex']['standard_error'], 0)) & (round(sex['t_stat'], 0)==round(reg.results['sex']['t_stat'], 0)) & (round(sex['p_value'], 0)==round(reg.results['sex']['p_value'], 2))\n",
+        "ageEq = (round(age['coefficient'], 0)==round(reg.results['age']['coefficient'], 0)) &  (round(age['standard_error'], 0)==round(reg.results['age']['standard_error'], 0)) & (round(age['t_stat'], 0)==round(reg.results['age']['t_stat'], 0)) & (round(age['p_value'], 0)==round(reg.results['age']['p_value'], 0))\n",
+        "educEq = (round(educ['coefficient'], 0)==round(reg.results['educ']['coefficient'], 0)) & (round(educ['standard_error'], 0)==round(reg.results['educ']['standard_error'], 0)) & (round(educ['t_stat'], 0)==round(reg.results['educ']['t_stat'], 0)) & (round(educ['p_value'], 0)==round(reg.results['educ']['p_value'], 0))\n",
+        "whiteEq = (round(white['coefficient'], 0)==round(reg.results['white']['coefficient'], 0)) & (round(white['standard_error'], 0)==round(reg.results['white']['standard_error'], 0)) & (round(white['t_stat'], 0)==round(reg.results['white']['t_stat'], 0)) & (round(white['p_value'], 0)==round(reg.results['white']['p_value'], 0))\n",
+        "interceptEq = (round(intercept['coefficient'], 0)==round(reg.results['intercept']['coefficient'], 0)) & (round(intercept['standard_error'], 0)==round(reg.results['intercept']['standard_error'], 0)) & (round(intercept['t_stat'], 0)==round(reg.results['intercept']['t_stat'], 0)) & (round(intercept['p_value'], 0)==round(reg.results['intercept']['p_value'], 0))\n",
+        "\n",
+        "sexEq2 = (round(sex['coefficient'], 0)==round(reg.results['sex']['coefficient'], 0)) & (round(sex['standard_error'], 0)==round(reg.results['sex']['standard_error'], 0)) & (round(sex['t_stat'], 0)==round(reg.results['sex']['t_stat'], 0)) & (round(sex['p_value']*2, 0)==round(reg.results['sex']['p_value'], 0))\n",
+        "ageEq2 = (round(age['coefficient'], 0)==round(reg.results['age']['coefficient'], 0)) &  (round(age['standard_error'], 0)==round(reg.results['age']['standard_error'], 0)) & (round(age['t_stat'], 0)==round(reg.results['age']['t_stat'], 0)) & (round(age['p_value']*2, 0)==round(reg.results['age']['p_value'], 0))\n",
+        "educEq2 = (round(educ['coefficient'], 0)==round(reg.results['educ']['coefficient'],0)) & (round(educ['standard_error'], 0)==round(reg.results['educ']['standard_error'], 0)) & (round(educ['t_stat'], 0)==round(reg.results['educ']['t_stat'], 0)) & (round(educ['p_value']*2, 0)==round(reg.results['educ']['p_value'], 0))\n",
+        "whiteEq2 = (round(white['coefficient'], 0)==round(reg.results['white']['coefficient'], 0)) & (round(white['standard_error'], 0)==round(reg.results['white']['standard_error'], 0)) & (round(white['t_stat'], 0)==round(reg.results['white']['t_stat'], 0)) & (round(white['p_value']*2, 0)==round(reg.results['white']['p_value'], 0))\n",
+        "interceptEq2 = (round(intercept['coefficient'], 0)==round(reg.results['intercept']['coefficient'], 0)) & (round(intercept['standard_error'], 0)==round(reg.results['intercept']['standard_error'], 0)) & (round(intercept['t_stat'], 0)==round(reg.results['intercept']['t_stat'], 0)) & (round(intercept['p_value']*2, 0)==round(reg.results['intercept']['p_value'], 0))\n",
+        "\n",
+        "print ((sexEq & ageEq & educEq & whiteEq & interceptEq)|(sexEq2 & ageEq2 & educEq2 & whiteEq2 & interceptEq2))\n"
       ],
       "metadata": {
-        "id": "bpMxgTuqITdR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7F-RwjYxJ0wT",
+        "outputId": "04474d5d-a79b-4574-acce-19cca5655e8f"
       },
-      "id": "bpMxgTuqITdR",
+      "id": "7F-RwjYxJ0wT",
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\"\n",
+            "-------- Summary --------\n",
+            "\"  Variable name  coefficient value  standard error  t-statistic       p-value\n",
+            "0           sex      -13565.410627      584.976467   -23.189669  1.000000e+00\n",
+            "1           age        -234.991719       16.183833   -14.520153  1.000000e+00\n",
+            "2          educ        5774.818729      142.857276    40.423694  0.000000e+00\n",
+            "3         white        3404.128500     1156.674059     2.943032  1.627799e-03\n",
+            "4     intercept       13199.797996     1893.014235     6.972899  1.623452e-12\n",
+            "---------\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y.name"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "dnMUu5RXT3YM",
+        "outputId": "3a7650d4-5cce-4ed9-ea7d-1f5c1c5ae6ad"
+      },
+      "id": "dnMUu5RXT3YM",
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'incwage'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     }
   ],
   "metadata": {
