--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 53,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -955,6 +955,20 @@
         "    self.p_val = t.sf (self.t_stat, self.df)\n",
         "#> Col5 - End\n",
         "\n",
+        "#> Set the dict for Results\n",
+        "  def resultToDict(self):\n",
+        "    dfResultsDict = pd.DataFrame({\n",
+        "            \"Variable name\"     : self.x_list\n",
+        "            ,\"coefficient\": self.Beta_hat\n",
+        "            ,\"standard_error\"   : self.stdError\n",
+        "            ,\"t_stat\"      : self.t_stat\n",
+        "            ,\"p_value\"          : self.p_val\n",
+        "                    })\n",
+        "    dfResultsDict = dfResultsDict.set_index(\"Variable name\")\n",
+        "    self.results = dfResultsDict.transpose().to_dict()\n",
+        "\n",
+        "#> End of dict Method\n",
+        "\n",
         "  def ols_regression(self):\n",
         "    \"\"\" Main method to call\"\"\"\n",
         "    self.BetaHat()\n",
@@ -962,6 +976,7 @@
         "    self.std_error()\n",
         "    self.t_statistic()\n",
         "    self.p_value()\n",
+        "    self.resultToDict()\n",
         "\n",
         "  def summary(self):\n",
         "    \"\"\"Will display the summary of all feature of the Multi dimension Regression\"\"\"\n",
@@ -974,18 +989,7 @@
         "                    ,\"t-statistic\"      : self.t_stat\n",
         "                    ,\"p-value\"          : self.p_val\n",
         "                           })\n",
-        "    print(f'\"\\n-------- Summary --------\\n\"{dfResults}')\n",
-        "\n",
-        "    ## v Result in a Dict\n",
-        "    dfResultsDict = pd.DataFrame({\n",
-        "                \"Variable name\"     : self.x_list\n",
-        "                ,\"coefficient\": self.Beta_hat\n",
-        "                ,\"standard_error\"   : self.stdError\n",
-        "                ,\"t_stat\"      : self.t_stat\n",
-        "                ,\"p_value\"          : self.p_val\n",
-        "                        })\n",
-        "    dfResultsDict = dfResultsDict.set_index(\"Variable name\")\n",
-        "    self.results = dfResultsDict.transpose().to_dict()"
+        "    print(f'\"\\n-------- Summary --------\\n\"{dfResults}')"
       ]
     },
     {
@@ -999,6 +1003,7 @@
         "reg = RegressionModel(x, y, True)\n",
         "reg.ols_regression()\n",
         "reg.summary()\n",
+        "\n",
         "print('---------')\n",
         "sex = {'coefficient': -13565.410626563069,'standard_error': 584.9764665087288,'t_stat': -23.189668992198083,'p_value': 1.0}\n",
         "age = {'coefficient': -234.9917187921841,'standard_error': 16.183832538528538,'t_stat': -14.52015264201133,'p_value': 1.0}\n",
@@ -1018,17 +1023,18 @@
         "whiteEq2 = (round(white['coefficient'], 0)==round(reg.results['white']['coefficient'], 0)) & (round(white['standard_error'], 0)==round(reg.results['white']['standard_error'], 0)) & (round(white['t_stat'], 0)==round(reg.results['white']['t_stat'], 0)) & (round(white['p_value']*2, 0)==round(reg.results['white']['p_value'], 0))\n",
         "interceptEq2 = (round(intercept['coefficient'], 0)==round(reg.results['intercept']['coefficient'], 0)) & (round(intercept['standard_error'], 0)==round(reg.results['intercept']['standard_error'], 0)) & (round(intercept['t_stat'], 0)==round(reg.results['intercept']['t_stat'], 0)) & (round(intercept['p_value']*2, 0)==round(reg.results['intercept']['p_value'], 0))\n",
         "\n",
-        "print ((sexEq & ageEq & educEq & whiteEq & interceptEq)|(sexEq2 & ageEq2 & educEq2 & whiteEq2 & interceptEq2))\n"
+        "print (sexEq & ageEq & educEq & whiteEq & interceptEq)\n",
+        "print (sexEq2 & ageEq2 & educEq2 & whiteEq2 & interceptEq2)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7F-RwjYxJ0wT",
-        "outputId": "04474d5d-a79b-4574-acce-19cca5655e8f"
+        "outputId": "48a4dd32-d89a-4d58-daf6-296957fae4ce"
       },
       "id": "7F-RwjYxJ0wT",
-      "execution_count": 39,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,6 +1049,8 @@
             "3         white        3404.128500     1156.674059     2.943032  1.627799e-03\n",
             "4     intercept       13199.797996     1893.014235     6.972899  1.623452e-12\n",
             "---------\n",
+            "True\n",
+            "False\n",
             "True\n"
           ]
         }
@@ -1051,31 +1059,27 @@
     {
       "cell_type": "code",
       "source": [
-        "y.name"
+        "reg.results['intercept']['coefficient']"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "dnMUu5RXT3YM",
-        "outputId": "3a7650d4-5cce-4ed9-ea7d-1f5c1c5ae6ad"
+        "id": "wyRforNmnQhJ",
+        "outputId": "295e3955-53d4-4631-f31b-dd93dd01b8ec"
       },
-      "id": "dnMUu5RXT3YM",
-      "execution_count": null,
+      "id": "wyRforNmnQhJ",
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'incwage'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
+              "13199.7979959389"
+            ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 45
         }
       ]
     }
